# RustMediaMerger

./: Cargo.toml  build.rs  readme.md
src/: main.rs
