[package]
name = "merge_media"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
rfd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
log = "0.4"
winapi = { version = "0.3", features = [
    "winbase",
    "winnt",
    "processthreadsapi",
    "securitybaseapi",
    "shellapi",
    "errhandlingapi",
    "handleapi",
    "winuser",
] }
[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
walkdir = "2"
